syntax = "proto3";

package ru.leti.wise.task.profile;

import "profile.proto";
import "google/protobuf/empty.proto";


service ProfileService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc SendResetPasswordEmail(SendResetPasswordEmailRequest) returns (google.protobuf.Empty);
  rpc ChangePassword(ChangePasswordRequest) returns (google.protobuf.Empty);
  rpc GetAllProfiles(google.protobuf.Empty) returns (GetAllProfilesResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc GetProfileByEmail(GetProfileByEmailRequest) returns (GetProfileByEmailResponse);
  rpc DeleteProfile(DeleteProfileRequest) returns (google.protobuf.Empty);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc GetProfileStatistic(GetProfileStatisticRequest) returns (GetProfileStatisticResponse);
}

message GetProfileRequest {
  string profile_id = 1;
}

message GetProfileResponse {
  Profile profile = 1;
}

message GetProfileByEmailRequest {
  string email = 1;
}

message GetProfileByEmailResponse {
  Profile profile = 1;
}

message DeleteProfileRequest {
  string profile_id = 1;
}

message UpdateProfileRequest {
  Profile profile = 1;
}

message UpdateProfileResponse {
  Profile profile = 1;
}

message GetProfileStatisticRequest {
  string profile_id = 1;
}

message GetProfileStatisticResponse {
  ProfileStatistic profileStatistic = 1;
}

message SignUpRequest {
  Profile profile = 1;
}

message SignUpResponse {
  Profile profile = 1;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  Profile profile = 1;
}

message ResetPasswordRequest{
  string recovery_token = 1;
  string new_password = 2;
}

message SendResetPasswordEmailRequest{
  string email = 1;
}

message ResetPasswordResponse{
  Profile profile = 1;
}

message ChangePasswordRequest{
  string profile_id = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message GetAllProfilesResponse {
  repeated Profile profile = 1;
}